--- a/Faiyad_PartA.ipynb
+++ b/Faiyad_PartA.ipynb
@@ -15,8 +15,16 @@
     }
    ],
    "source": [
-    "print(\"Hello World!\")"
+    "print(\"Hello World\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3b161f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
