--- a/Notebooks/Salsabila_PartA.ipynb
+++ b/Notebooks/Salsabila_PartA.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "b0b5698c",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "22cdc0c3",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "f39f2403",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "5f969d53",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "a69c5eef",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "02c3ea6f",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package punkt_tab to\n",
       "[nltk_data]     C:\\Users\\asus\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers\\punkt_tab.zip.\n"
+      "[nltk_data]   Package punkt_tab is already up-to-date!\n"
      ]
     },
     {
@@ -189,7 +189,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "id": "d2fca952",
    "metadata": {},
    "outputs": [
@@ -233,26 +233,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "cbfeb332",
+   "cell_type": "markdown",
+   "id": "f161fd67",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Classification', 'is', 'the', 'task', 'of', 'choosing', 'the', 'correct', 'class', 'label', 'for', 'a', 'given', 'input.', 'In', 'basic', 'classification', 'tasks,', 'each', 'input', 'is', 'considered', 'in', 'isolation', 'from', 'all', 'other', 'inputs,', 'and', 'the', 'set', 'of', 'labels', 'is', 'defined', 'in', 'advance.', 'The', 'basic', 'classification', 'task', 'has', 'a', 'number', 'of', 'interesting', 'variants.', 'For', 'example,', 'in', 'multiclass', 'classification,', 'each', 'instance', 'may', 'be', 'assigned', 'multiple', 'labels;', 'in', 'open-class', 'classification,', 'the', 'set', 'of', 'labels', 'is', 'not', 'defined', 'in', 'advance;', 'and', 'in', 'sequence', 'classification,', 'a', 'list', 'of', 'inputs', 'are', 'jointly', 'classified.']\n"
-     ]
-    }
-   ],
    "source": [
-    "print(split_tokens)"
+    "Below is a function that can calculate the metrics of the results of each approach."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "id": "2619d5c2",
    "metadata": {},
    "outputs": [
@@ -329,9 +319,9 @@
     "  - Hyphenated words split incorrectly: 0  \n",
     "\n",
     "Analysis & Proof:\n",
-    "- Punctuation is not separated; 13 tokens have punctuation still attached. Example: `input.` and `tasks,`.  \n",
+    "- Punctuation is not separated. 13 tokens have punctuation still attached. Example: `input.` and `tasks,`. Due to punctuation not being separated, vocabulary size is inflated thus introduces noise. \n",
     "- Hyphenated words are preserved because punctuation stays attached (`open-class` counted as one token).  \n",
-    "- Limitation: Punctuation attached inflates vocabulary and creates noise for ML models.\n",
+    "- Limitation: Preserving punctuation with words is not suitable for ML models, due to the fact that it will unnecessarily increases feature dimensionality.\n",
     "\n",
     "\n",
     "**2. Regular Expression**\n",
@@ -344,8 +334,9 @@
     "Analysis & Proof:\n",
     "- Punctuation is completely removed, 0 punctuation-attached tokens.  \n",
     "- Example: `input.` → `input`, `tasks,` → `tasks`.  \n",
-    "- Problem: Hyphenated word `open-class` is split into `open` and `class` → semantic meaning lost.  \n",
-    "- Vocabulary slightly smaller (50 unique tokens) due to punctuation removal.  \n",
+    "- Limitation: Hyphenated word `open-class` is split into `open` and `class` thus losing the semantic meaning.  \n",
+    "- Vocabulary slightly smaller (50 unique tokens) due to punctuation removal.\n",
+    "- RegEX offers cleaner tokens but loses some of the semantic integrity for hyphenated words.  \n",
     "\n",
     "**3. NLTK**\n",
     "Metrics from the results:\n",
@@ -356,13 +347,13 @@
     "\n",
     "Analysis & Proof:\n",
     "- Punctuation is separated as individual tokens. Example from first 15 tokens: ['input', '.', 'tasks', ',', 'labels', ';', 'open-class']\n",
-    "- the period (`.`), comma (`,`), and semicolon (`;`) are counted as separate tokens.  \n",
-    "- Hyphenated words (`open-class`) are preserved → correct semantic representation.  \n",
+    "- The period (`.`), comma (`,`), and semicolon (`;`) are counted as separate tokens.  \n",
+    "- Hyphenated words (`open-class`) are preserved which offers correct semantic representation.  \n",
     "- Total token count is higher because punctuation is separated, but this allows controlled preprocessing (e.g., removing punctuation or stopwords).  \n",
     "- Vocabulary size (53 unique tokens) is appropriate — balances completeness and accuracy.\n",
     "\n",
     "**Conclusion**\n",
-    "- **Split()**: Keeps punctuation attached however iw will inflates tokens which is not ideal for ML preprocessing.  \n",
+    "- **Split()**: Keeps punctuation attached however it will inflate tokens which is not ideal for ML preprocessing.  \n",
     "- **Regex**: Clean punctuation which is good for counting, but splits hyphenated words thus loses semantic meaning.  \n",
     "- **NLTK**: Linguistically aware but separates punctuation, preserves hyphenated words. NLTK is the  **best choice** for downstream text analytics tasks.  \n"
    ]
@@ -393,30 +384,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "id": "bb6122af",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\asus\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Stop Words Found in Corpus:\n",
       "\n",
-      "{'and', 'each', 'in', 'has', 'be', 'is', 'the', 'not', 'are', 'all', 'from', 'a', 'of', 'other', 'for'}\n",
+      "{'other', 'not', 'is', 'all', 'the', 'and', 'each', 'in', 'has', 'are', 'from', 'for', 'of', 'a', 'be'}\n",
       "\n",
       "Tokens after Stop Word Removal:\n",
       "\n",
       "['classification', 'task', 'choosing', 'correct', 'class', 'label', 'given', 'input', '.', 'basic', 'classification', 'tasks', ',', 'input', 'considered', 'isolation', 'inputs', ',', 'set', 'labels', 'defined', 'advance', '.', 'basic', 'classification', 'task', 'number', 'interesting', 'variants', '.', 'example', ',', 'multiclass', 'classification', ',', 'instance', 'may', 'assigned', 'multiple', 'labels', ';', 'open-class', 'classification', ',', 'set', 'labels', 'defined', 'advance', ';', 'sequence', 'classification', ',', 'list', 'inputs', 'jointly', 'classified', '.']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\asus\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
    ],
@@ -452,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "id": "89fc1c82",
    "metadata": {},
    "outputs": [
@@ -487,15 +478,227 @@
    "id": "d984b103",
    "metadata": {},
    "source": [
-    "The reason why filtering stop words and punctuation is important are as follow:\n",
+    "Filtering stop words and punctuations is a vital preprocesssing step in text analytics and natural language processing. The reasons include:\n",
     "\n",
-    "1. Stop words such as \"the\", \"is\", and \"in\" do not carry significant semantic meaning.\n",
-    "2. Removing them reduces dimensionality of the feature space.\n",
-    "3. It improves computational efficiency.\n",
-    "4. It enhances model performance by reducing noise.\n",
-    "5. Punctuation does not contribute to classification tasks and may distort word frequency analysis.\n",
+    "1. Stop words carry minimal semantic value\n",
+    "Words like 'the', 'is', 'in', and 'and' all fall under stop words, they frequently appear across texts but don't contribute to distinguishing between classes. Keeping stop words can obscure meaningful patterns in text.\n",
     "\n",
-    "Therefore, filtering improves the quality of text representation in text analytics tasks.\n"
+    "2. Reduces feature space dimensionality\n",
+    "Remocing stop words reduces the number of tokens which simplifies the feature matrix and makes algorithms more efficient.\n",
+    "\n",
+    "3. Improves computational efficiency\n",
+    "Machine learning models like Naive Bayes, Logistic Regression, or SVMs process fewer irrelevent features, which results in faster training and prediciton times which is critical in large datasets.\n",
+    "\n",
+    "4. Enhances model performance by reducing noise\n",
+    "Stop words and punctuation introduces noise in statistical and machine learning model. In order for the model to focus on informative words, removing stop words and punctuation is necessary.\n",
+    "\n",
+    "5. Supports better semantic representation\n",
+    "Removing irrelevant tokens allows for remaining words to better capture the essence of the text. This in return will improve downstream tasks such as sentiment analysis, spam detection or authorship attribution where meaningful patterns are subtle and context-dependent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a45ce5f1",
+   "metadata": {},
+   "source": [
+    "# INDIVIDUAL PART (Q5) - SALSABILA AURELIA OKTANIOPUTRI\n",
+    "- Alternative approach implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9601cc1b",
+   "metadata": {},
+   "source": [
+    "## 5.1 Alternative Approach Implementation : TD-IDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d3b28d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: scikit-learn in c:\\users\\asus\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (1.8.0)\n",
+      "Requirement already satisfied: numpy>=1.24.1 in c:\\users\\asus\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from scikit-learn) (2.4.1)\n",
+      "Requirement already satisfied: scipy>=1.10.0 in c:\\users\\asus\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from scikit-learn) (1.17.0)\n",
+      "Requirement already satisfied: joblib>=1.3.0 in c:\\users\\asus\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from scikit-learn) (1.5.3)\n",
+      "Requirement already satisfied: threadpoolctl>=3.2.0 in c:\\users\\asus\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from scikit-learn) (3.6.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 26.0.1\n",
+      "[notice] To update, run: C:\\Users\\asus\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "# installing scikit-learnf for TD-IDF Vectorizer\n",
+    "!pip install scikit-learn\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3d1ceb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokens using TF-IDF Vectorizer:\n",
+      "\n",
+      "['classification', 'is', 'the', 'task', 'of', 'choosing', 'correct', 'class', 'label', 'for', 'given', 'input', 'in', 'basic', 'tasks', 'each', 'considered', 'isolation', 'from', 'all', 'other', 'inputs', 'and', 'set', 'labels', 'defined', 'advance', 'has', 'number', 'interesting', 'variants', 'example', 'multiclass', 'instance', 'may', 'be', 'assigned', 'multiple', 'open', 'not', 'sequence', 'list', 'are', 'jointly', 'classified']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize TF-IDF vectorizer\n",
+    "tfidf = TfidfVectorizer()\n",
+    "\n",
+    "# Fit on your text (must be list format)\n",
+    "tfidf.fit([text])\n",
+    "\n",
+    "# Extract vocabulary (this gives us the tokens)\n",
+    "tfidf_tokens = list(tfidf.vocabulary_.keys())\n",
+    "\n",
+    "print(\"Tokens using TF-IDF Vectorizer:\\n\")\n",
+    "print(tfidf_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "80bb0e84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Split() ---\n",
+      "Total tokens: 82\n",
+      "Tokens with punctuation attached: 13\n",
+      "Hyphenated words split incorrectly: 0\n",
+      "Unique tokens: 55\n",
+      "\n",
+      "--- Regex ---\n",
+      "Total tokens: 83\n",
+      "Tokens with punctuation attached: 0\n",
+      "Hyphenated words split incorrectly: 1\n",
+      "Unique tokens: 50\n",
+      "\n",
+      "--- NLTK ---\n",
+      "Total tokens: 94\n",
+      "Tokens with punctuation attached: 13\n",
+      "Hyphenated words split incorrectly: 0\n",
+      "Unique tokens: 53\n",
+      "\n",
+      "--- TF-IDF ---\n",
+      "Total tokens: 45\n",
+      "Tokens with punctuation attached: 0\n",
+      "Hyphenated words split incorrectly: 1\n",
+      "Unique tokens: 45\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "\n",
+    "def tokenizer_metrics(name, tokens, original_text):\n",
+    "    total = len(tokens)\n",
+    "    # Count tokens with punctuation attached (like input., tasks,)\n",
+    "    punct_attached = sum(1 for t in tokens if any(p in t for p in string.punctuation))\n",
+    "    # Unique tokens (vocab size)\n",
+    "    unique = len(set(tokens))\n",
+    "    \n",
+    "    # Count hyphenated words in original text that were split incorrectly\n",
+    "    hyphen_words = [word for word in original_text.split() if '-' in word]\n",
+    "    hyphen_split_count = sum(1 for hw in hyphen_words if hw not in tokens)\n",
+    "    \n",
+    "    print(f\"--- {name} ---\")\n",
+    "    print(\"Total tokens:\", total)\n",
+    "    print(\"Tokens with punctuation attached:\", punct_attached)\n",
+    "    print(\"Hyphenated words split incorrectly:\", hyphen_split_count)\n",
+    "    print(\"Unique tokens:\", unique)\n",
+    "    print()\n",
+    "\n",
+    "# Compare Tokenizers\n",
+    "tokenizer_metrics(\"Split()\", split_tokens, text)\n",
+    "tokenizer_metrics(\"Regex\", regex_tokens, text)\n",
+    "tokenizer_metrics(\"NLTK\", nltk_tokens, text)\n",
+    "tokenizer_metrics(\"TF-IDF\", tfidf_tokens, text)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f1c2c93",
+   "metadata": {},
+   "source": [
+    "## 5.2 Compare and contrast the alternative approach with the group’s approach.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0aeba49",
+   "metadata": {},
+   "source": [
+    "The alternative approach implemented was using **TD-IDF** Vectorizers, which differs from the group's tokenization methods (Split(), Regular Expression, and NLTK) in both functionality and purpose. \n",
+    "\n",
+    "The group's approach focus on lexical tokenization, which means that they split text into tokens (wors) based on whitespace, patterns or linguistic rules. Method of tokenization differs for each approach, \n",
+    "\n",
+    "- Split() \n",
+    "- Regular Expression \n",
+    "- NLTK\n",
+    "\n",
+    "On the other hand, TF-IDF tokenization is integrated within machine learning feature extraction process. The process of how TF-IDF works is as follows:\n",
+    "\n",
+    "- Automatically converts text to lowercase\n",
+    "- Removes punctuation\n",
+    "- Splits hyphenated words\n",
+    "- Produces a clean vocabulary suitable for modeling\n",
+    "\n",
+    "To conclude, **what differentiates TF-IDF with the group's approach is that it is designed for computational modeling and feature preparation**. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67798827",
+   "metadata": {},
+   "source": [
+    "## 5.3 Explain why the alternative approach is better, worse, or just different. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "350b8295",
+   "metadata": {},
+   "source": [
+    "The TF-IDF approach is different as it is not only a tokenizer but also is a part of a **feature extraction pipeline** that is designed for supervised learning task.\n",
+    "\n",
+    "**Reasons why TF-IDF approach can be better**:\n",
+    "- It automatically normalizes text through lowercasing\n",
+    "- Punctuations are removed which reduces noise\n",
+    "- It oriduces clean & consistent tokens which are more suitable for classification models\n",
+    "- It allows for the direct integration into machine learning workflows\n",
+    "\n",
+    "**Reasons why TF-IDF approach can be worse**:\n",
+    "- It splits hyphenated words, which potentially alters semantic meaning\n",
+    "- It does not automatically remove stopwords unless explicitly specified\n",
+    "- It offers less linguistic control\n",
+    "\n",
+    "**To conclude**, classifying this approach to be better of worse is not possible because TF-IDF serves a different purpose. This approach is more suitable for machine learning-based text analytics because it directly prepares text for numerical representation and classification tasks."
    ]
   }
  ],
